# bevy_decl_egui

./: Cargo.toml
assets/gui/: window.gui
examples/: simple.rs
src/: const_concat.rs  lib.rs  loader.rs  main.rs  model.rs
src/reader/: binding.rs  data_model.rs  error.rs  mod.rs  reader.rs
