[package]
name = "bevy_uiconf_egui"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.75"
bevy = "0.12.1"
bevy_egui = "0.24.0"
downcast-rs = "1.2.0"
jomini = "0.25.0"
serde = "1.0.193"
serde-value = "0.7.0"
smol_str = "0.2.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.52"

[dev-dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.22.0"
